# ipl_prediction_live

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  iplt20_test.js  pyproject.toml  requirements.txt  roadmap.md  start_docker.bat  start_local.bat
config/: logging.yaml  scraper.yaml  sources.yaml
docs/: API_ENDPOINTS.md  SETUP_GUIDE.md
frontend/: .dockerignore  Dockerfile
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: layout.js
frontend/src/lib/: api.js
migrations/: env.py
scripts/: analytics_views.sql  seed_teams_venues.py  setup_databases.sql
src/: __init__.py  cli.py  main.py
src/analytics/: __init__.py  batting.py  bowling.py  team_analytics.py  venue_analytics.py  warehouse.py
src/api/: __init__.py  app.py  deps.py  schemas.py
src/api/routers/: analytics.py  (+6 more)
src/core/: __init__.py  config_manager.py  notification.py  orchestrator.py  state_manager.py
src/models/: __init__.py  availability.py  delivery.py  match.py  player.py  venue.py
src/parsers/: __init__.py  cricsheet_parser.py  delivery_parser.py  match_parser.py  news_nlp.py  player_parser.py  venue_parser.py
src/scrapers/: __init__.py  base.py  cricbuzz.py  cricsheet.py  espncricinfo.py  iplt20.py  news_scraper.py  weather_api.py
src/scripts/: validate_db.py  validate_integrity.py
src/storage/: __init__.py  cache_manager.py  connection.py  db_models.py  json_warehouse.py  postgres_repo.py
src/utils/: __init__.py  fuzzy_matcher.py  http_client.py  proxy_rotator.py  user_agent.py  validators.py
(+13 files in other folders)
